# CS-6220-HPC-Project-Monte-Carlo

./: CMakeLists.txt  Makefile  README.md  main.cpp  pi_calc  pi_calc.cpp
monte_carlo_pi.dSYM/Contents/: Info.plist
monte_carlo_pi.dSYM/Contents/Resources/DWARF/: monte_carlo_pi
pi_calc.dSYM/Contents/: Info.plist
pi_calc.dSYM/Contents/Resources/DWARF/: pi_calc
